--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,12 +1,14 @@
-name: Daily Market Data Pull
+name: Daily Market Data Fetch
 
 on:
   schedule:
-    - cron: '0 9 * * *' # Runs daily at 9 AM UTC
+    - cron: '0 9 * * *'  # Scheduled to run daily at 9 AM UTC
+  workflow_dispatch:       # Enables manual triggering
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -14,10 +16,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x
+          python-version: 3.9
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run the script
+      - name: Execute run.py
         run: python src/run.py
