--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -16,7 +16,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.10  # Correct version
+
+      - name: Clear pip cache
+        run: pip cache purge  # Optional but clears cache for fresh run
 
       - name: Install dependencies
         run: pip install -r requirements.txt
