--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -29,4 +29,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Execute run.py
-        run: python src/run.py
+        run: python -m src.run
