--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Daily Market Data Fetch
 
 on:
   schedule:
-    - cron: '0 9 * * *'  # Scheduled to run daily at 9 AM UTC
+    # - cron: '0 9 * * *'  # Scheduled to run daily at 9 AM UTC
   workflow_dispatch:       # Enables manual triggering
 
 jobs:
